- Added ``--no-repair`` flag for ``sentry upgrade`` for large installs.
- Fixed bug with merging counters yielding the wrong values.
- Require password confirmation when enabling/disabling 2fa.
- Collapse repeated frames in the stacktrace UI.
- Added weekly report emails behind feature flag.
- Rebrand Rules as Alerts / Alert Rules.
- Add frequency to Alerts.

Schema Changes
~~~~~~~~~~~~~~

- Added unique index on ``Authenticator(user_id, type)``

Version 8.8
-----------

- Added unique user frequency rule condition.
- Fixed a major performance regression from 8.7 on the ``GroupTagValue`` model.
- Various security fixes related to CSRF and XSS.
- Server side filtering of event ingest.

Schema Changes
~~~~~~~~~~~~~~

- Removed ``HelpPage`` model.
- Added ``OrganizationMember.token`` column.
- Removed ``OrganizationMember.counter`` column.

Version 8.7
-----------

- Removed "Replay Request" feature.
- Upgraded underlying redis library to resolve some networking issues.
- Added support for minified React exceptions.

Schema Changes
~~~~~~~~~~~~~~

- Remove index ``GroupTagValue(project_id)``.
- Added ``Rule.status`` column.
- Added ``GroupRelease`` model.
- Added ``Environment`` model.
- Added ``ReleaseEnvironment`` model.

Version 8.6
-----------

- The ``message`` attribute on Event/Group is now purely used for search storage.
- The ``sentry.interfaces.Message`` interface now contains a ``formatted`` attribute.
- ``SENTRY_MANAGED_USER_FIELDS`` now defaults to an empty list.
- Issues now render based on the type of data present, which are represented by
  the type and metadata attributes in API responses.
- Stacktrace rendering has been greatly simplified and unified across languages.
- Client's may now pass the 'contexts' attribute, which will eventually supercede 'extra'.
- Various named contexts are now automatically generated and summarized for Cocoa and JavaScript
  issues.
- Added JSON formatting for logs with ``system.logging-format``.