@@ -111,28 +111,6 @@ section.org-login {
   }
 }
 
-.primary-email {
-  position: relative;
-
-  &.not-verified {
-    padding-right: 168px;
-  }
-
-  .verification-label {
-    position: absolute;
-    top: -3px;
-    left: 110px;
-  }
-
-  .verified-status {
-    position: absolute;
-    top: 0;
-    right: 0;
-    padding-top: 28px;
-  }
-
-}
-
 .account-settings-overview {
   position: relative;
   padding-right: 140px;
