@@ -30,5 +30,6 @@
 //
 // Overrides Bootstrap defaults
 
-@panel-default-border:    @trim;
-@panel-inner-border:      @trim;
+@panel-default-heading-bg:  @white-darker;
+@panel-default-border:      @trim;
+@panel-inner-border:        @trim;
