@@ -4,7 +4,7 @@
 {% load i18n %}
 {% load sentry_helpers %}
 
-{% block title %}{% trans "Notification Settings" %} | {{ block.super }}{% endblock %}
+{% block title %}{% trans "Email Settings" %} | {{ block.super }}{% endblock %}
 
 {% block main %}
   {% if request.user.has_unverified_emails %}
@@ -17,61 +17,70 @@
     </div>
   {% endif %}
 
-  <legend class="m-t-0">Emails</legend>
-
-  <form action="" method="post" class="">
-    {% csrf_token %}
-    <button type="submit" class="hidden"></button>
-    {{ email_form|as_crispy_errors }}
-
-    <div class='primary-email {% if not primary_email.is_verified %}not-verified{% endif %}'>
-      <div class='email-input'>
-        {% if not primary_email.is_verified %}
-        <div class="verification-label">
-          <span class="label verification label-warning">Unverified</span>
-        </div>
-        {% else %}
-        <div class="verification-label">
-          <span class="label verification label-success">Verified</span>
-        </div>
-        {% endif %}
-        {{ email_form.primary_email|as_crispy_field }}
-      </div>
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <h3 class="panel-title">Emails</h3>
     </div>
-    <br>
-    <label for='id_alternative_emails' class='control-label'>Alternative Emails</label>
-    {% if alt_emails %}
-    <table class="table table-bordered m-b-0">
+    <table class="table">
       <tbody>
-      {% for email in alt_emails %}
+      <tr>
+        <td>
+          {{ primary_email.email }}
+          <span> (Primary)</span>
+          {% if not primary_email.is_verified %}
+          <span class="label verification label-warning">Unverified</span>
+          {% endif %}
+        </td>
+        <td>
+        </td>
+        <td>
+        </td>
+      </tr>
+      {% if alt_emails %}
+        {% for email in alt_emails %}
         <tr>
           <td>
             {{ email.email }}
             {% if not email.is_verified %}
             <span class="label verification label-warning">Unverified</span>
-            {% else %}
-            <span class="label verification label-success">Verified</span>
+            {% endif %}
+          </td>
+          <td style="text-align: right">
+            {% if email != primary_email and email.is_verified and not user.is_managed %}
+            <form action="" method="post">
+              {% csrf_token %}
+              <input type='hidden' name='new_primary_email' value='{{ email.email }}'>
+              <button type='submit' name='primary' class='btn btn-default'>Set as Primary Email</button>
+            </form>
             {% endif %}
           </td>
           <td style="text-align:center">
+            {% if email  != primary_email %}
             <form action="" method="post">
               {% csrf_token %}
               <input type='hidden' name='email' value='{{ email.email }}'>
               <button type='submit' name='remove' class='btn btn-danger btn-sm remove'><span class="icon-trash"></span></button>
             </form>
+            {% endif %}
           </td>
         </tr>
-      {% endfor %}
+        {% endfor %}
+      {% endif %}
       </tbody>
     </table>
-    <p class='help-block'>To use an email for <a href="{% url "sentry-account-settings-notifications" %}">notifications</a> it must be verified</p>
-    {% endif %}
-
-    {% if not alt_emails %}
-      <div>No alternative emails in your account</div>
-    {% endif %}
-    <br>
+  </div>
+  <p class='help-block'>To use an email for <a href="{% url "sentry-account-settings-notifications" %}">notifications</a> it must be verified</p>
+  <br>
+  <form action="" method="post" class="">
+    {% csrf_token %}
+    {{ email_form|as_crispy_errors }}
     {{ email_form.alt_email|as_crispy_field }}
+
+    {% if email_form.password %}
+      {% with email_form.password as field %}
+        {{ field|as_crispy_field }}
+      {% endwith %}
+    {% endif %}
 
     {% if email_form.password %}
       {{ email_form.password|as_crispy_field }}
