@@ -18,7 +18,6 @@ class EmailsTest(TestCase):
         resp = self.client.get(self.path)
         assert resp.status_code == 200
         self.assertTemplateUsed('sentry/account/settings/emails.html')
-        assert 'alt_emails' in resp.context
         assert 'primary_email' in resp.context
         self.assertIn('foo@example.com', resp.content)
 
@@ -53,23 +52,8 @@ class EmailsTest(TestCase):
         user.set_password('something')
         user.save()
         resp = self.client.post(self.path, data={
-            'primary_email': user.email,
-            'alt_email': 'hello@gmail.com'},
-            follow=True
-        )
-        assert resp.status_code == 200
-        self.assertIn('This field is required', resp.content)
-        emails = UserEmail.objects.filter(user=user)
-        assert 'hello@gmail.com' not in ([email.email for email in emails])
-
-    def test_create_alt_email_without_usable_pw(self):
-        user = self.create_user('foo@example.com')
-        self.login_as(user)
-        user.set_unusable_password()
-        user.save()
-        resp = self.client.post(self.path, data={
-            'primary_email': user.email,
-            'alt_email': 'hello@gmail.com'
+            'alt_email': 'hello@gmail.com',
+            'password': 'something',
         },
             follow=True
         )
@@ -77,6 +61,21 @@ class EmailsTest(TestCase):
         self.assertIn('hello@gmail.com', resp.content)
         emails = UserEmail.objects.filter(user=user)
         assert 'hello@gmail.com' in ([email.email for email in emails])
+
+    def test_create_alt_email_without_usable_pw(self):
+        user = self.create_user('foo@example.com')
+        self.login_as(user)
+        user.set_unusable_password()
+        user.save()
+        resp = self.client.post(self.path, data={
+            'alt_email': 'hello@gmail.com',
+        },
+            follow=True
+        )
+        assert resp.status_code == 200
+        self.assertIn('This field is required', resp.content)
+        emails = UserEmail.objects.filter(user=user)
+        assert 'hello@gmail.com' not in ([email.email for email in emails])
 
     def test_remove_alt_email(self):
         user = self.create_user('foo@example.com')
@@ -105,3 +104,13 @@ class EmailsTest(TestCase):
         user = User.objects.get(id=user.id)
         assert user.email != 'foo@example.com'
         assert user.email == 'bar@example.com'
+
+    def test_username_updates(self):
+        user = self.create_user('foo@example.com')
+        self.login_as(user)
+        email = UserEmail(user=user, email='bar@example.com')
+        email.save()
+        self.client.post(self.path, data={'primary': '', 'new_primary_email': 'bar@example.com'}, follow=True)
+        user = User.objects.get(id=user.id)
+        assert user.username != 'foo@example.com'
+        assert user.username == 'bar@example.com'
